transitions and color change

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
+
 .App {
   text-align: center;
 }
@@ -15,15 +16,24 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.App-main {
+  background-color: rgb(220, 220, 229);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: rgb(47, 45, 45);
+  transition: background .4s ease-in,
+  color ease .4s;
+
+}
+
+.dark {
+  background-color: rgb(18, 19, 20);
   color: white;
+  transition: background .4s ease-in, color ease .4s;
 }
 
 .App-link {
@@ -38,3 +48,5 @@
     transform: rotate(360deg);
   }
 }
+
+
