--- a/src/components/NavbarComp/NavbarComp.scss
+++ b/src/components/NavbarComp/NavbarComp.scss
@@ -11,7 +11,7 @@ $bcColor:#f8f9fa;
 }
 
 .navbar-collapse {
-    background-color: $bcColor;
+    //background-color: $bcColor;
 }
 
 .navigation {
@@ -25,4 +25,5 @@ $bcColor:#f8f9fa;
 .darkModeToggle {
     margin-left: 2px;
 }
+
 
