video on background

--- a/src/components/HeroComp/Hero.scss
+++ b/src/components/HeroComp/Hero.scss
@@ -1,4 +1,34 @@
 
-.hero {
+
+.video-wrapper {
+    /* Telling our absolute positioned video to 
+  be relative to this element */
+    position: relative;
+
+    width: auto;
     height: 400px;
+
+    /* Will not allow the video to overflow the 
+  container */
+    overflow: hidden;
+
+    /* Centering the container's content vertically 
+  and horizontally */
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: green;
+   
+}
+
+video {
+    object-fit:cover!important;
+    height: 100%;
+    width: 100%;
+    
+    position: absolute;
+    top: 0;
+    left: 0;
 }
