--- a/src/components/NavbarComp/NavbarComp.scss
+++ b/src/components/NavbarComp/NavbarComp.scss
@@ -1,29 +1,26 @@
-
 $bcColor:#f8f9fa;
 
-.flag{
+.flag {
     margin-top: 15px;
     width: 25px;
 }
 
-.navbar{
-    padding-bottom: 0.8rem!important;
+.navbar {
+    padding-bottom: 0.8rem !important;
 }
 
-.navbar-collapse {
-    //background-color: $bcColor;
-}
 
 .navigation {
-    height: 30px;  
-    
-    img:hover{
-        cursor: pointer; 
+    height: 30px;
+
+
+
+    img:hover {
+        cursor: pointer;
+        opacity: 0.5;
     }
 }
 
 .darkModeToggle {
     margin-left: 2px;
 }
-
-
