--- a/src/components/HeroComp/Hero.scss
+++ b/src/components/HeroComp/Hero.scss
@@ -1,7 +1,7 @@
 
 .hero {
 
-    h1{
+    h1, h3{
         position: relative;
         color: white;
         text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.6);
