--- a/src/components/NavbarComp/NavbarComp.scss
+++ b/src/components/NavbarComp/NavbarComp.scss
@@ -1,12 +1,27 @@
 $bcColor:#f8f9fa;
+$medDisp: 991px;
 
 .flag {
     margin-top: 15px;
     width: 25px;
+
+    @media (max-width: $medDisp){
+         margin-top: -96px;
+    }
 }
+
+
 
 .navbar {
     padding-bottom: 0.8rem !important;
+}
+
+@media (max-width: $medDisp) {
+
+    .navbar-collapse {
+        background-color: #f8f9fa63;
+        border-radius: 10px;
+    }
 }
 
 
