onclic chages animation on about

--- a/src/components/AboutComp/About.scss
+++ b/src/components/AboutComp/About.scss
@@ -7,6 +7,10 @@
     transition: transform 2s 2s;
     transform-style: preserve-3d;
 
+    &:hover{
+        cursor: pointer;
+    }
+
     &.visible {
         transform: rotateX(50deg) rotateZ(15deg) rotateY(15deg);
 
