--- a/src/components/AboutComp/About.scss
+++ b/src/components/AboutComp/About.scss
@@ -11,6 +11,12 @@
         cursor: pointer;
     }
 
+    &.back{
+        position: relative;
+        top: 0;
+        left: -4.8px;
+    }
+
     &.visible {
         transform: rotateX(50deg) rotateZ(15deg) rotateY(15deg);
 
@@ -21,7 +27,7 @@
         &.back {
             transform: rotateX(50deg) rotateZ(15deg) rotateY(15deg) translateZ(100px);
             position: relative;
-            top: -0rem;
+            top: 0rem;
             left: 0.5rem;
         }
 
