--- a/src/components/ProjetsComp/Projects.scss
+++ b/src/components/ProjetsComp/Projects.scss
@@ -1,15 +1,20 @@
-.projets{
+.projets {
     height: 600px;
 }
-.description{
+
+.description {
     background-color: rgba(184, 182, 183, 0.80);
     border-radius: 15px;
 }
 
-img{
-    width:100%;
-    height:100%;
-    object-fit:cover;
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     padding: 10px;
     border-radius: 10px;
+}
+
+p {
+    white-space: pre-line
 }
