--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,14 @@
 @import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600&display=swap');
 
+$primary-background-light: rgb(220, 220, 229);
 
 .App {
   text-align: center;
 }
 
 .App-main {
-  background-color: rgb(220, 220, 229);
+  background-color: $primary-background-light;
   font-size: calc(10px + 2vmin);
   color: rgb(47, 45, 45);
   transition: background .4s ease-in,
@@ -18,6 +20,16 @@
   background-color: rgb(18, 19, 20);
   color: white;
   transition: background .4s ease-in, color ease .4s;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Rajdhani';
+  font-weight: bold;
+  margin-bottom: 0 !important;
+}
+
+p {
+  font-size: 0.8em;
 }
 
 .article{
