--- a/src/components/AboutComp/About.scss
+++ b/src/components/AboutComp/About.scss
@@ -1,17 +1,17 @@
-.vector{
+.vector {
     width: 300px;
     height: auto;
-    position:absolute;
+    position: absolute;
     top: 25rem;
     left: 3rem;
     transition: transform 2s 2s;
     transform-style: preserve-3d;
 
-    &:hover{
+    &:hover {
         cursor: pointer;
     }
 
-    &.back{
+    &.back {
         position: relative;
         top: 0;
         left: -4.8px;
@@ -33,18 +33,14 @@
 
     }
 
-   
 
-    img{
+
+    img {
         width: 100%;
         transition: transform 2s;
     }
-
 }
 
-
-
-
-
-
-
+.carousel {
+    padding: 30px;
+}
